# Bayesian-Statistics

./: .gitignore  Bayesian.toml  Bayesian_workspace.code-workspace  README.md  gitignore.txt  pyproject.toml  requirements.txt
Bayesian/Rethinking/: Rethinking_Ch03.ipynb  Rethinking_Ch04.ipynb  Rethinking_Ch05.ipynb
