[build-system]
requires = ["setuptools >= 67.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Bayesian"
version = "0.0.1"
authors = [
  { name="Soroosh Sanatkhani", email="sorooshsanatkhani@hotmail.com" },
]

description = "Learning Bayesian statistics"
readme = "README.md"
license = {text = "GPL-3.0 license"}
requires-python = ">=3.11.3"

dependencies = [
    "ipykernel",
    "pytest >= 7.2.2",
    "pandas",
    "numpy >= 1.23.5",
    "h5py >= 3.8.0",
    "netcdf4",
    "tensorflow",
    "tensorflow_probability",
    "scipy >= 1.10.1",
    "matplotlib",
    "seaborn",
    "daft",
    "causalgraphicalmodels"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sorooshsanatkhani/Bayesian-Statistics"
"Bug Tracker" = "https://github.com/sorooshsanatkhani/Bayesian-Statistics"