[build-system]
requires = ["setuptools >= 67.7.2"]
build-backend = "setuptools.build_meta"

[project]
name = "Bayesian"
version = "0.0.1"
authors = [
  { name="Soroosh Sanatkhani", email="sorooshsanatkhani@hotmail.com" },
]

description = "Learning Bayesian statistics"
readme = "README.md"
license = {text = "GPL-3.0 license"}
requires-python = ">=3.11.3"

dependencies = [
    "ipykernel >= 6.22.0",
    "pytest >= 7.2.2",
    "tensorflow >= 2.12.0",
    "tensorflow_probability >= 0.19.0",
    "pandas >= 2.0.1",
    "numpy >= 1.23.5",
    "h5py >= 3.8.0",
    "netcdf4 >= 1.6.3",
    "scipy >= 1.10.1",
    "matplotlib >= 3.7.1",
    "seaborn >= 0.12.2",
    "arviz >= 0.15.1",
    "daft >= 0.1.2",
    "causalgraphicalmodels >= 0.0.4"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sorooshsanatkhani/Bayesian-Statistics"
"Bug Tracker" = "https://github.com/sorooshsanatkhani/Bayesian-Statistics"
